compiler_semantic_analyser_Final/DecafParser.py
# Generated from Decaf.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class DecafParser ( Parser ):

    grammarFileName = "Decaf.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'boolean'", "'float'", "'string'", "'double'", 
                     "'char'", "'break'", "'callout'", "'class'", "'continue'", 
                     "'else'", "'false'", "'for'", "'if'", "'else if'", 
                     "'int'", "'return'", "'true'", "'void'", "'{'", "'}'", 
                     "'['", "']'", "'('", "')'", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "';'", "','", "'!'", "'<'", "'>'", "'<='", "'>='", 
                     "'=='", "'!='", "'&&'", "'||'", "'='", "'+='", "'-='", 
                     "'\"'" ]

    symbolicNames = [ "<INVALID>", "BOOLEAN", "FLOAT", "STRING", "DOUBLE", 
                      "CHAR_", "BREAK", "CALLOUT", "CLASS", "CONTINUE", 
                      "ELSE", "FALSE", "FOR", "IF", "ELSE_IF", "INT", "RETURN", 
                      "TRUE", "VOID", "LCURLY", "RCURLY", "LSQUARE", "RSQUARE", 
                      "LBRACE", "RBRACE", "PLUS", "MINUS", "MULTIPLY", "DIVIDE", 
                      "MOD", "SEMICOLON", "COMMA", "EXCLAMATION", "LESS_THAN", 
                      "GREATER_THAN", "LESS_OR_EQUAL", "GREATER_OR_EQUAL", 
                      "DOUBLE_EQUAL", "NOT_EQUAL", "AND", "OR", "ASSIGN", 
                      "PLUS_ASSIGN", "MINUS_ASSIGN", "DOUBLE_QUOTE", "ID", 
                      "DECIMAL_LITERAL", "HEX_LITERAL", "WS", "COMMENT", 
                      "CHAR", "STRING_LITERAL" ]

    RULE_program = 0
    RULE_field_name = 1
    RULE_field_decl = 2
    RULE_data_type = 3
    RULE_expr = 4
    RULE_method_call = 5
    RULE_method_name = 6
    RULE_callout_arg = 7
    RULE_bool_literal = 8
    RULE_char_literal = 9
    RULE_int_literal = 10
    RULE_string_literal = 11
    RULE_literal = 12
    RULE_location = 13
    RULE_method_decl = 14
    RULE_return_type = 15
    RULE_block = 16
    RULE_var_decl = 17
    RULE_assign_op = 18
    RULE_statement = 19
    RULE_values_of_varible = 20

    ruleNames =  [ "program", "field_name", "field_decl", "data_type", "expr", 
                   "method_call", "method_name", "callout_arg", "bool_literal", 
                   "char_literal", "int_literal", "string_literal", "literal", 
                   "location", "method_decl", "return_type", "block", "var_decl", 
                   "assign_op", "statement", "values_of_varible" ]

    EOF = Token.EOF
    BOOLEAN=1
    FLOAT=2
    STRING=3
    DOUBLE=4
    CHAR_=5
    BREAK=6
    CALLOUT=7
    CLASS=8
    CONTINUE=9
    ELSE=10
    FALSE=11
    FOR=12
    IF=13
    ELSE_IF=14
    INT=15
    RETURN=16
    TRUE=17
    VOID=18
    LCURLY=19
    RCURLY=20
    LSQUARE=21
    RSQUARE=22
    LBRACE=23
    RBRACE=24
    PLUS=25
    MINUS=26
    MULTIPLY=27
    DIVIDE=28
    MOD=29
    SEMICOLON=30
    COMMA=31
    EXCLAMATION=32
    LESS_THAN=33
    GREATER_THAN=34
    LESS_OR_EQUAL=35
    GREATER_OR_EQUAL=36
    DOUBLE_EQUAL=37
    NOT_EQUAL=38
    AND=39
    OR=40
    ASSIGN=41
    PLUS_ASSIGN=42
    MINUS_ASSIGN=43
    DOUBLE_QUOTE=44
    ID=45
    DECIMAL_LITERAL=46
    HEX_LITERAL=47
    WS=48
    COMMENT=49
    CHAR=50
    STRING_LITERAL=51

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(DecafParser.CLASS, 0)

        def ID(self):
            return self.getToken(DecafParser.ID, 0)

        def LCURLY(self):
            return self.getToken(DecafParser.LCURLY, 0)

        def RCURLY(self):
            return self.getToken(DecafParser.RCURLY, 0)

        def EOF(self):
            return self.getToken(DecafParser.EOF, 0)

        def field_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.Field_declContext)
            else:
                return self.getTypedRuleContext(DecafParser.Field_declContext,i)


        def method_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.Method_declContext)
            else:
                return self.getTypedRuleContext(DecafParser.Method_declContext,i)


        def getRuleIndex(self):
            return DecafParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = DecafParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.state = 76
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 42
                self.match(DecafParser.CLASS)
                self.state = 43
                self.match(DecafParser.ID)
                self.state = 44
                self.match(DecafParser.LCURLY)
                self.state = 48
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 45
                        self.field_decl() 
                    self.state = 50
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

                self.state = 54
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DecafParser.BOOLEAN) | (1 << DecafParser.FLOAT) | (1 << DecafParser.STRING) | (1 << DecafParser.DOUBLE) | (1 << DecafParser.CHAR_) | (1 << DecafParser.INT) | (1 << DecafParser.VOID))) != 0):
                    self.state = 51
                    self.method_decl()
                    self.state = 56
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 57
                self.match(DecafParser.RCURLY)
                self.state = 58
                self.match(DecafParser.EOF)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 59
                self.match(DecafParser.CLASS)
                self.state = 60
                self.match(DecafParser.ID)
                self.state = 61
                self.match(DecafParser.LCURLY)
                self.state = 65
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 62
                        self.method_decl() 
                    self.state = 67
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DecafParser.BOOLEAN) | (1 << DecafParser.FLOAT) | (1 << DecafParser.STRING) | (1 << DecafParser.DOUBLE) | (1 << DecafParser.CHAR_) | (1 << DecafParser.INT))) != 0):
                    self.state = 68
                    self.field_decl()
                    self.state = 73
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 74
                self.match(DecafParser.RCURLY)
                self.state = 75
                self.match(DecafParser.EOF)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Field_nameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(DecafParser.ID, 0)

        def LSQUARE(self):
            return self.getToken(DecafParser.LSQUARE, 0)

        def int_literal(self):
            return self.getTypedRuleContext(DecafParser.Int_literalContext,0)


        def RSQUARE(self):
            return self.getToken(DecafParser.RSQUARE, 0)

        def getRuleIndex(self):
            return DecafParser.RULE_field_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterField_name" ):
                listener.enterField_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitField_name" ):
                listener.exitField_name(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitField_name" ):
                return visitor.visitField_name(self)
            else:
                return visitor.visitChildren(self)




    def field_name(self):

        localctx = DecafParser.Field_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_field_name)
        try:
            self.state = 84
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 78
                self.match(DecafParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 79
                self.match(DecafParser.ID)
                self.state = 80
                self.match(DecafParser.LSQUARE)
                self.state = 81
                self.int_literal()
                self.state = 82
                self.match(DecafParser.RSQUARE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Field_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def data_type(self):
            return self.getTypedRuleContext(DecafParser.Data_typeContext,0)


        def field_name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.Field_nameContext)
            else:
                return self.getTypedRuleContext(DecafParser.Field_nameContext,i)


        def SEMICOLON(self):
            return self.getToken(DecafParser.SEMICOLON, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(DecafParser.COMMA)
            else:
                return self.getToken(DecafParser.COMMA, i)

        def getRuleIndex(self):
            return DecafParser.RULE_field_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterField_decl" ):
                listener.enterField_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitField_decl" ):
                listener.exitField_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitField_decl" ):
                return visitor.visitField_decl(self)
            else:
                return visitor.visitChildren(self)




    def field_decl(self):

        localctx = DecafParser.Field_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_field_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.data_type()
            self.state = 87
            self.field_name()
            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==DecafParser.COMMA:
                self.state = 88
                self.match(DecafParser.COMMA)
                self.state = 89
                self.field_name()
                self.state = 94
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 95
            self.match(DecafParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Data_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(DecafParser.INT, 0)

        def CHAR_(self):
            return self.getToken(DecafParser.CHAR_, 0)

        def BOOLEAN(self):
            return self.getToken(DecafParser.BOOLEAN, 0)

        def STRING(self):
            return self.getToken(DecafParser.STRING, 0)

        def FLOAT(self):
            return self.getToken(DecafParser.FLOAT, 0)

        def DOUBLE(self):
            return self.getToken(DecafParser.DOUBLE, 0)

        def getRuleIndex(self):
            return DecafParser.RULE_data_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterData_type" ):
                listener.enterData_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitData_type" ):
                listener.exitData_type(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitData_type" ):
                return visitor.visitData_type(self)
            else:
                return visitor.visitChildren(self)




    def data_type(self):

        localctx = DecafParser.Data_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_data_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DecafParser.BOOLEAN) | (1 << DecafParser.FLOAT) | (1 << DecafParser.STRING) | (1 << DecafParser.DOUBLE) | (1 << DecafParser.CHAR_) | (1 << DecafParser.INT))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def location(self):
            return self.getTypedRuleContext(DecafParser.LocationContext,0)


        def method_call(self):
            return self.getTypedRuleContext(DecafParser.Method_callContext,0)


        def literal(self):
            return self.getTypedRuleContext(DecafParser.LiteralContext,0)


        def LBRACE(self):
            return self.getToken(DecafParser.LBRACE, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.ExprContext)
            else:
                return self.getTypedRuleContext(DecafParser.ExprContext,i)


        def RBRACE(self):
            return self.getToken(DecafParser.RBRACE, 0)

        def MINUS(self):
            return self.getToken(DecafParser.MINUS, 0)

        def EXCLAMATION(self):
            return self.getToken(DecafParser.EXCLAMATION, 0)

        def MULTIPLY(self):
            return self.getToken(DecafParser.MULTIPLY, 0)

        def DIVIDE(self):
            return self.getToken(DecafParser.DIVIDE, 0)

        def MOD(self):
            return self.getToken(DecafParser.MOD, 0)

        def PLUS(self):
            return self.getToken(DecafParser.PLUS, 0)

        def LESS_THAN(self):
            return self.getToken(DecafParser.LESS_THAN, 0)

        def GREATER_THAN(self):
            return self.getToken(DecafParser.GREATER_THAN, 0)

        def LESS_OR_EQUAL(self):
            return self.getToken(DecafParser.LESS_OR_EQUAL, 0)

        def GREATER_OR_EQUAL(self):
            return self.getToken(DecafParser.GREATER_OR_EQUAL, 0)

        def DOUBLE_EQUAL(self):
            return self.getToken(DecafParser.DOUBLE_EQUAL, 0)

        def NOT_EQUAL(self):
            return self.getToken(DecafParser.NOT_EQUAL, 0)

        def AND(self):
            return self.getToken(DecafParser.AND, 0)

        def OR(self):
            return self.getToken(DecafParser.OR, 0)

        def getRuleIndex(self):
            return DecafParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = DecafParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 100
                self.location()
                pass

            elif la_ == 2:
                self.state = 101
                self.method_call()
                pass

            elif la_ == 3:
                self.state = 102
                self.literal()
                pass

            elif la_ == 4:
                self.state = 103
                self.match(DecafParser.LBRACE)
                self.state = 104
                self.expr(0)
                self.state = 105
                self.match(DecafParser.RBRACE)
                pass

            elif la_ == 5:
                self.state = 107
                self.match(DecafParser.MINUS)
                self.state = 108
                self.expr(8)
                pass

            elif la_ == 6:
                self.state = 109
                self.match(DecafParser.EXCLAMATION)
                self.state = 110
                self.expr(7)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 133
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 131
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                    if la_ == 1:
                        localctx = DecafParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 113
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 114
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DecafParser.MULTIPLY) | (1 << DecafParser.DIVIDE) | (1 << DecafParser.MOD))) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 115
                        self.expr(7)
                        pass

                    elif la_ == 2:
                        localctx = DecafParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 116
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 117
                        _la = self._input.LA(1)
                        if not(_la==DecafParser.PLUS or _la==DecafParser.MINUS):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 118
                        self.expr(6)
                        pass

                    elif la_ == 3:
                        localctx = DecafParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 119
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 120
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DecafParser.LESS_THAN) | (1 << DecafParser.GREATER_THAN) | (1 << DecafParser.LESS_OR_EQUAL) | (1 << DecafParser.GREATER_OR_EQUAL))) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 121
                        self.expr(5)
                        pass

                    elif la_ == 4:
                        localctx = DecafParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 122
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 123
                        _la = self._input.LA(1)
                        if not(_la==DecafParser.DOUBLE_EQUAL or _la==DecafParser.NOT_EQUAL):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 124
                        self.expr(4)
                        pass

                    elif la_ == 5:
                        localctx = DecafParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 125
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 126
                        self.match(DecafParser.AND)
                        self.state = 127
                        self.expr(3)
                        pass

                    elif la_ == 6:
                        localctx = DecafParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 128
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                        self.state = 129
                        self.match(DecafParser.OR)
                        self.state = 130
                        self.expr(2)
                        pass

             
                self.state = 135
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Method_callContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def method_name(self):
            return self.getTypedRuleContext(DecafParser.Method_nameContext,0)


        def LBRACE(self):
            return self.getToken(DecafParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(DecafParser.RBRACE, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.ExprContext)
            else:
                return self.getTypedRuleContext(DecafParser.ExprContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(DecafParser.COMMA)
            else:
                return self.getToken(DecafParser.COMMA, i)

        def CALLOUT(self):
            return self.getToken(DecafParser.CALLOUT, 0)

        def STRING_LITERAL(self):
            return self.getToken(DecafParser.STRING_LITERAL, 0)

        def callout_arg(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.Callout_argContext)
            else:
                return self.getTypedRuleContext(DecafParser.Callout_argContext,i)


        def getRuleIndex(self):
            return DecafParser.RULE_method_call

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethod_call" ):
                listener.enterMethod_call(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethod_call" ):
                listener.exitMethod_call(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethod_call" ):
                return visitor.visitMethod_call(self)
            else:
                return visitor.visitChildren(self)




    def method_call(self):

        localctx = DecafParser.Method_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_method_call)
        self._la = 0 # Token type
        try:
            self.state = 161
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [DecafParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 136
                self.method_name()
                self.state = 137
                self.match(DecafParser.LBRACE)
                self.state = 146
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DecafParser.CALLOUT) | (1 << DecafParser.FALSE) | (1 << DecafParser.TRUE) | (1 << DecafParser.LBRACE) | (1 << DecafParser.MINUS) | (1 << DecafParser.EXCLAMATION) | (1 << DecafParser.ID) | (1 << DecafParser.DECIMAL_LITERAL) | (1 << DecafParser.HEX_LITERAL) | (1 << DecafParser.CHAR) | (1 << DecafParser.STRING_LITERAL))) != 0):
                    self.state = 138
                    self.expr(0)
                    self.state = 143
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==DecafParser.COMMA:
                        self.state = 139
                        self.match(DecafParser.COMMA)
                        self.state = 140
                        self.expr(0)
                        self.state = 145
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 148
                self.match(DecafParser.RBRACE)
                pass
            elif token in [DecafParser.CALLOUT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 150
                self.match(DecafParser.CALLOUT)
                self.state = 151
                self.match(DecafParser.LBRACE)
                self.state = 152
                self.match(DecafParser.STRING_LITERAL)
                self.state = 157
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==DecafParser.COMMA:
                    self.state = 153
                    self.match(DecafParser.COMMA)
                    self.state = 154
                    self.callout_arg()
                    self.state = 159
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 160
                self.match(DecafParser.RBRACE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Method_nameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(DecafParser.ID, 0)

        def getRuleIndex(self):
            return DecafParser.RULE_method_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethod_name" ):
                listener.enterMethod_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethod_name" ):
                listener.exitMethod_name(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethod_name" ):
                return visitor.visitMethod_name(self)
            else:
                return visitor.visitChildren(self)




    def method_name(self):

        localctx = DecafParser.Method_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_method_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self.match(DecafParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Callout_argContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(DecafParser.ExprContext,0)

